# LipNet-End-to-End-Sentence-Level-Lipreading

./: .bash_history  .gitignore  .viminfo  LipNet.ipynb  LipNet_PyTorch_Implementation.ipynb  LipNet_Tensorflow.ipynb  README.md  download_dataset.py  main.ipynb  main2-Copy1.ipynb  main2-Copy2.ipynb  main2.ipynb  preprocess_videos.ipynb  pyproject.toml  pytorchModel_preprocess_videos.ipynb  requirements.txt  test_environment.py  util_remove_corrupted_npy_files.py
