[project]
name = "lipnet-end-to-end-sentence-level-lipreading"
version = "0.1.0"
description = "LipNet"
readme = "README.md"
requires-python = "==3.12.5"
dependencies = [
    "contourpy==1.3.1",
    "dlib==19.24.6",
    "gdown==5.2.0",
    "imageio==2.37.0",
    "ipykernel==6.29.5",
    "keras==3.9.0",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "numpy==2.1.3",
    "opencv-python==4.11.0.86",
    "pillow==11.1.0",
    "seaborn==0.13.2",
    "tensorflow>=2.19.0",
    "torch==2.6.0",
    "torchinfo==1.8.0",
    "tqdm==4.67.1",
    "wheel==0.45.1",
]
